# MADE_ALGO

./: CMakeLists.txt  gen_test.py  main.cpp  task11_1.cpp  task16.cpp  task18.cpp  task1_2.cpp  task2_3.cpp  task3_1.cpp  task4_2.cpp  task6_4.cpp  task7_1.cpp  task8_2.cpp  ztask_hw01_01_grasshopper.cpp  ztask_hw01_02_turtle.cpp  ztask_hw01_03_longest_inc_seq.cpp  ztask_hw01_04_levenstein_distance.cpp  ztask_hw02_01_pair_matching_general_graph.cpp  ztask_hw02_02_removing_brackets.cpp  ztask_hw02_03_pair_matching_tree.cpp  ztask_hw02_04_hamilton_cycle.cpp  ztask_hw02_05_domino.cpp
algo1/: task11_1.cpp  task1_2.cpp  task3_1.cpp
algo2/hw_01_02_dyn_prog/: ztask_hw02_01_pair_matching_general_graph.cpp
algo2/hw_03_04_number_theory/: hw04_01_find_min_generator.cpp  hw04_02_discrete_logarithm.cpp  ztask_hw03_01_factorization.cpp  ztask_hw03_02_several_funcs.cpp  ztask_hw03_02_several_funcs_cache.cpp  ztask_hw03_03_crack_RSA.cpp  ztask_hw03_04_point_on_plane.cpp  ztask_hw03_05_chinese_reminder_theorem.cpp
algo2/hw_05_06_intervals/: hw05_01_rsq_simple.cpp  hw05_01_rsq_simple_simple.cpp  hw05_02_fenwick_tree.cpp  hw05_03_segment_tree.cpp  hw05_04_sparse_matrix.cpp  hw05_04_sparse_matrix_simple_vector.cpp  hw06_01_multidim_fenwick.cpp  hw06_03_LCA.cpp  hw06_05_LCA_min.cpp  input.txt
algo2/hw_08_09_flow/: hw08_01_max_flow.cpp  hw08_02_min_cut.cpp  hw08_03_two_paths.cpp  hw09_01_min_cost.cpp  hw09_02_assignment_problem.cpp  hw09_02_assignment_problem_dijkstra.cpp
algo2/hw_11_string/: hw11_01_suffix_array.cpp
