cmake_minimum_required(VERSION 3.15)
project(made_algo)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer")
set(CMAKE_CXX_STANDARD 14)

add_executable(task1_2 task1_2.cpp)
add_executable(task2_3 task2_3.cpp)
add_executable(task6_4 task6_4.cpp)
add_executable(task8_2 task8_2.cpp)
add_executable(task7_1 task7_1.cpp)
add_executable(task11_1 task11_1.cpp)
add_executable(task16 task16.cpp)
add_executable(dynprog ztask_hw01_01_grasshopper.cpp)
add_executable(dynprog2 ztask_hw01_02_turtle.cpp)
add_executable(dynprog3 ztask_hw01_03_longest_inc_seq.cpp)
add_executable(dynprog4 ztask_hw01_04_levenstein_distance.cpp)
add_executable(dynprog5 ztask_hw02_01_pair_matching_general_graph.cpp)
add_executable(dynprog7 ztask_hw02_03_pair_matching_tree.cpp)
add_executable(dynprog6 ztask_hw02_04_hamilton_cycle.cpp)
